# live-bootcamp-project

./: .gitignore  compose.override.yml  compose.yml  taskfile.yml
.github/workflows/: prod.yml
app-service/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  compose.override.yml  compose.yml  default.toml  tailwind.css  taskfile.yml
app-service/assets/: tailwind.css
app-service/src/: config.rs  lib.rs  lib.rs.bak  logging.rs  main.rs
app-service/src/components/: mod.rs
app-service/src/components/date_picker/: component.rs
app-service/src/components/navbar/: style.css
app-service/src/form/: component.rs
app-service/src/views/: app_navbar.rs  home.rs  login.rs  mod.rs  signup.rs
app-sv/: .dockerignore  Dockerfile  README.md  components.json  package.json  svelte.config.js  taskfile.yml
app-sv/src/: app.css
app-sv/src/lib/: index.ts  result.ts  utils.ts
app-sv/src/lib/components/: light-switch.svelte  login-form.svelte
app-sv/src/lib/shadcn/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte  button-group.svelte
app-sv/src/lib/shadcn/components/ui/calendar/: calendar-month-select.svelte  calendar-year-select.svelte
app-sv/src/lib/shadcn/components/ui/field/: field-content.svelte  field-description.svelte  field-error.svelte  field-group.svelte  field-label.svelte  field-legend.svelte  field-separator.svelte  field-set.svelte  field-title.svelte  field.svelte
app-sv/src/lib/shadcn/components/ui/input-group/: input-group-addon.svelte  input-group-button.svelte  input-group-input.svelte  input-group-text.svelte  input-group-textarea.svelte  input-group.svelte
app-sv/src/lib/shadcn/components/ui/item/: item-separator.svelte
app-sv/src/lib/shadcn/components/ui/kbd/: kbd-group.svelte  kbd.svelte
app-sv/src/lib/shadcn/components/ui/native-select/: native-select.svelte
app-sv/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
app-sv/src/routes/app/: +page.server.ts  +page.svelte
app-sv/src/routes/login/: +page.server.ts  +page.svelte
app-sv/src/routes/login/2fa/: +page.server.ts  +page.svelte
app-sv/src/routes/logout/: +page.server.ts
auth-service/: .gitignore  Cargo.toml  Dockerfile  compose.override.yml  compose.yml  default.toml  shki.toml  taskfile.yml
auth-service/.sqlx/: query-8fb4143e048add3c071537efb23cb3b249a349c72473863d6a8828a37dc0c6c1.json  query-d0ce0c3d9c7c6fb2b22c5b94e127cc33ce441f6d84a672c45edf2adfc32d3fe2.json
auth-service/db/: .luarc.json  init.lua  shki.yml
auth-service/db/.luacats/: shki.lua
auth-service/db/migrations/: 0000_user-table.down.sql  0000_user-table.sql
auth-service/db/migrations/_meta/: 20260215203650_0ee3edfc.json
auth-service/schema/: init.lua  selene.toml
auth-service/schema/migrations/: 0000_init.down.sql  0000_init.sql  0001_remove-2fa-for-redis.down.sql  0001_remove-2fa-for-redis.sql
auth-service/schema/migrations/_meta/: 20260225034542_a089836b.json  20260225034600_eeb881ae.json  20260228180748_3fc41e3f.json  20260228181321_341d4191.json
auth-service/src/: config.rs  database.rs  error.rs  errors.rs  lib.rs  logging.rs  main.rs  openapi.rs  state.rs
auth-service/src/domain/: data_stores.rs  email_client.rs  mod.rs  password.rs  redis.rs  two_factor.rs  user.rs
auth-service/src/domain/db/: mod.rs  user_row.rs
auth-service/src/handlers/: mod.rs
auth-service/src/routes/: health.rs  jwks.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: mod.rs
auth-service/src/services/banned_token/: mem.rs  mod.rs  redis.rs
auth-service/src/services/email/: mod.rs
auth-service/src/services/two_factor_code/: mem.rs  mod.rs  pg.rs  redis.rs
auth-service/src/services/user_store/: errors.rs  hash_map.rs  mem.rs  mod.rs  pg.rs  traits.rs
auth-service/src/utils/: auth.rs  crypto.rs  extractors.rs  mod.rs
auth-service/templates/: two_factor.html
auth-service/tests/: jwt-test-ecdsa.pem  jwt-test-rsa.pem  jwt-test-rsa.pub  jwt-test.pub
auth-service/tests/api/: common.rs  health.rs  helpers.rs  login.rs  logout.rs  main.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
