[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "libapp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-extra = { version = "0.12.1", features = ["cookie"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
askama = "0.14.0"
figment = { version = "0.10.19", features = ["toml", "env", "json", "yaml"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["tracing", "json", "tracing-serde", "env-filter"] }
