[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "libapp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
# tower-http = { version = "0.6.6", features = ["fs", "trace"] }
# tokio = { version = "1.48.0", features = ["full"] }
# reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.149"
# askama = "0.14.0"
figment = { version = "0.10.19", features = ["toml", "env", "json", "yaml"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = [
  "tracing",
  "json",
  "tracing-serde",
  "env-filter",
] }
dioxus = "0.7.3"
# wasm-pack = "0.14.0"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = [
  "router",
] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--strip-dwarf"]


[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
