[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"


[lib]
name = "libauth_service"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
figment = { version = "0.10.19", features = ["toml", "env", "json", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.22", features = [
  "json",
  "env-filter",
  "chrono",
] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "uuid",
  "yaml",
  "chrono",
  "url",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

sqlx = { version = "0.8.6", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "chrono",
] }
