[package]
name = "lgr_auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "lgr_auth"
path = "src/lib.rs"

[[bin]]
name = "lgr_auth"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
validator = "=0.20.0"
figment = { version = "0.10.19", features = ["toml", "env", "json", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.22", features = [
  "json",
  "env-filter",
  "chrono",
] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "uuid",
  "yaml",
  "chrono",
  "url",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

sqlx = { version = "0.8.6", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "chrono",
] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"], default-features = false }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["p256", "rsa", "ed25519-dalek", "rust_crypto", "hmac", "use_pem"] }
chrono = "0.4.43"
axum-extra = { version = "0.12.5", features = ["cookie", "middleware"] }
rand = { version = "0.9.2", features = ["serde"] }
askama = "0.15.4"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }

[dev-dependencies]
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
# only used for testing
cookie = "0.18.1"
axum-test = { version = "18.6.0", features = ["reqwest"] }
